plugins/devkit/devkit-java-tests/testData/inspections/lightServiceMustBeFinal/MakeFinal.java
import com.intellij.openapi.components.Service;

@Service
class <error descr="Light service must be final">MyService<caret></error> {
}
